--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "node-sass": "^4.10.0",
     "parcel-bundler": "^1.10.3",
     "pug": "^2.0.3"
+  },
+  "dependencies": {
+    "reset-css": "^4.0.1"
   }
 }
